# AdventOfCode2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: utils.py
src/adventofcode_2023/: __init__.py
src/adventofcode_2023/day_01/: README.md  day_01.py  input_ex3.txt
src/adventofcode_2023/day_02/: README.md  day_02.py
src/adventofcode_2023/day_03/: day_03.py
src/adventofcode_2023/day_04/: day_04.py
src/adventofcode_2023/day_05/: README.md  day_05.py
src/adventofcode_2023/day_06/: day_06.py
src/adventofcode_2023/day_07/: day_07.py
src/adventofcode_2023/day_08/: day_08.py
src/adventofcode_2023/day_09/: main.py
src/adventofcode_2023/day_10/: main.py
src/adventofcode_2023/day_11/: main.py
src/adventofcode_2023/day_12/: main.py
src/adventofcode_2023/day_13/: input_ex6.txt  main.py
src/adventofcode_2023/day_14/: main.py
src/adventofcode_2023/day_15/: main.py
src/adventofcode_2023/day_16/: main.py
src/adventofcode_2023/day_17/: input_ex2.txt  main.py
src/adventofcode_2023/day_18/: main.py
src/adventofcode_2023/day_19/: main.py
src/adventofcode_2023/day_20/: main.py
src/adventofcode_2023/day_21/: main.py
src/adventofcode_2023/day_22/: main.py
src/adventofcode_2023/day_23/: main.py
src/adventofcode_2023/day_24/: main.py
