[project]
name = "adventofcode-2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kevin Trebing", email = "Kevin.Trebing@gmx.net" }
]
dependencies = [
    "matplotlib>=3.7.4",
    "tqdm>=4.66.1",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
