[project]
name = "adventofcode-2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kevin Trebing", email = "Kevin.Trebing@gmx.net" }
]
dependencies = [
    "matplotlib>=3.7.4",
    "tqdm>=4.66.1",
    "numpy>=1.24.4",
    "joblib>=1.3.2",
    "sympy>=1.12",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
select = [
    "E",   # pycodestyle Errors
    "W",   # pycodestyle Warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "A",   # flake8-builtins
    "C90", # mccabe complexity
    "DJ",  # flake8-django
    "PIE", # flake8-pie
#    "SIM", # flake8-simplify
]
ignore = [
    "B905", # length-checking in zip() only introduced with Python 3.10 (PEP618)
    "UP007",  # Python version 3.9 does not allow writing union types as X | Y
    "UP038",  # Python version 3.9 does not allow writing union types as X | Y
    "D202",  # No blank lines allowed after function docstring
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function  # TODO This should be enabled in normal use
    "D104",  # Missing docstring in public package
    "D205",  # 1 blank line required between summary line and description
    "D203",  # One blank line before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line of docstring should end with a period
    "D404",  # First word of the docstring should not be "This"
    "D415",  # First line should end with a period, question mark, or exclamation point
    "DJ001", # Avoid using `null=True` on string-based fields
]
exclude = [
    ".git",
    ".local",
    ".cache",
    ".venv",
    "./venv",
    ".vscode",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "migrations"
]

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true
plugins = [
    'pydantic.mypy'
]
exclude = [
    "migrations/"
]
namespace_packages = true
explicit_package_bases = true
